--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -12,7 +12,7 @@
   integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
   crossorigin="anonymous" />
   <link rel="icon" type="image/png" href="./audioHaze-favicon-1.png">
-    <title>audioHAZE</title>
+    <title>audiohaze</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
